Revision history for exact::lib

{{$NEXT}}

1.01      2020-10-14 12:14:10-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.