@@ -1,6 +1,8 @@
 Revision history for exact::lib
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.01      2020-10-14 12:14:10-07:00 America/Los_Angeles
         - First version, released on an unsuspecting world.
